# LeakGPT_Game

./: .dockerignore  .env  .env.example  CHANGELOG.md  Dockerfile  FEATURES.md  README.md  RESPUESTAS_CORRECTAS_CTF.txt  UPDATE_SUMMARY.md  VALID_CTF_ANSWERS.txt  app.py  ctf_question_config.py  ctf_question_config_backup.py  ctf_question_config_fixed.py  ctf_question_config_new.py  debug_app.py  debug_live.py  debug_prompts.py  docker-compose.yml  identify_question.py  pyproject.toml  requirements.txt  show_current_challenges.py  show_interface_demo.py  verify_responses.py
LLM_Vulnerable/: CTF_Challenge_Description.txt
backup_configs/: app_fixed.py  ctf_question_config_new.py
docs/: QUICK_GUIDE.md
static/: ctf_answers.txt  ctf_question_config.py  llm_payloads_classified.txt  llm_question_bank.txt  llm_sensitive_data_training.txt  style.css
templates/: chat.html  final_score.html  home.html  select_level.html
utils/: load_valid_prompts.py  show_current_questions.py
